# cpp-soem-test

./: .clang-format  CMakeLists.txt  build.sh  compile_commands.json  main.c  server.c  simple_test.c  simple_test.h
.cache/clangd/index/: server.cc.890590B0EC5A8350.idx  simple_test.c.568F64A9618A61DA.idx  simple_test.h.5EB1EC2DC241DAAA.idx
test/linux/: simple_test.c
test/win32/: CMakeLists.txt  simple_test.c
